# PicGuide

./: .gitignore  README.md  TEST_GUIDE.md  build_native.ps1  build_release.ps1  build_release_clear.ps1  download_ffmpeg_dev.ps1  installer.iss  pubspec.yaml
.workbuddy/memory/: 2026-06-16.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-29.md  2026-06-30.md  MEMORY.md
_dev/: test_region.dart
_dev/docs/: TEST_GUIDE.md
_dev/scripts/: _update_doc.py  build_linux_release.sh  check_env.ps1  install_inno_setup.ps1  setup_flutter_env.bat  setup_flutter_env.ps1
assets/: USER_MANUAL.md
assets/data/: china_regions.json
lib/: main.dart
lib/src/db/: database.dart  database.g.dart
lib/src/providers/: provider_app.dart  provider_database.dart
lib/src/rust/: api.dart  batch.dart  decoder.dart  exif.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/services/: helper_md5.dart  helper_path.dart  native_bridge.dart  native_bridge_ffi.dart  native_bridge_stub.dart  service_exif_reader.dart  service_manual.dart  service_media_scanner.dart  service_region_resolver.dart  service_scan_controller.dart
lib/src/ui/browser/: dialog_scan_config.dart  page_browser.dart  view_video_player.dart  (+5 more)
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
native/: Cargo.toml
native/src/: batch.rs  decoder.rs  exif.rs  frb_generated.rs  hasher.rs  lib.rs
native/src/api/: mod.rs
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc
(+5 files in other folders)
