[package]
name = "native_media"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
md-5 = "0.10"
kamadak-exif = "0.6"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
